raw data table is now fixed width before wrapping

--- a/live/style.css
+++ b/live/style.css
@@ -183,8 +183,7 @@ body {
 }
 
 .viz-card--chart { flex: 2; }
-.viz-card--table { flex: 1.2; }
-
+.viz-card--table {flex: 0 0 350px;}
 .viz-card__title { font-size: 16px; font-weight: 600; margin-bottom: 16px; }
 
 /* Fixing Height Symmetry */
